1. jenkins安装信息更新